force-app/main/default/objects/FAR_Case__c/FAR_Case__c.object-meta.xml
<CustomObject>
    <label>FAR Case</label>
    <nameField>
        <displayFormat>FC-{000000000}</displayFormat>
        <label>FAR Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAR Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>