force-app/main/default/objects/FAR_Case__c/fields/Financial_Account_Role__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Role__c</fullName>
    <label>Financial Account Role</label>
    <referenceTo>FinServ__FinancialAccountRole__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>FAR_Cases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>